# ibmcloud-local

./: CLAUDE.md  README.md  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: ibmcloud_local.py
docs/: development-status.md
scripts/: bluestack-env.sh  seed.sh
src/: routing.py  server.py
src/iam/: policy_store.py  vpc_action_map.py
src/middleware/: auth.py  request_logger.py
src/models/: load_balancer.py  network_acl.py  public_gateway.py  resource_manager.py  transit_gateway.py  vpc.py
src/providers/: base.py  iam.py  load_balancer.py  network_acl.py  public_gateway.py  resource_manager.py  transit_gateway.py  vpc.py
src/state/: store.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_authz_enforcement.py  test_iam_api.py  test_iam_strict_mode.py  test_load_balancer_api.py  test_network_acl_api.py  test_policy_store.py  test_public_gateway_api.py  test_resource_manager_api.py  test_state_store.py  test_transit_gateway_api.py  test_vpc_api.py
